[project]
name = "mov"
version = "0.2.0"
description = "Sifting through data from Korean movie db"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage=""
Issues=""

[project.scripts]
mov-ping = 'mov.cli:ping'
