[project]
name = "mov"
version = "0.2.0"
description = "Sifting through data from Korean movie db"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.urls]
Homepage=""
Issues=""

[project.scripts]
mov-ping = 'mov.cli:ping'
